--- a/slack-support-bot-jira-handler/package.json
+++ b/slack-support-bot-jira-handler/package.json
@@ -7,6 +7,7 @@
   "scripts": {},
   "dependencies": {
     "@slack/web-api": "^5.8.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jira-connector": "^3.1.0"
   }
 }
