--- a/slack-support-bot-jira-handler/package.json
+++ b/slack-support-bot-jira-handler/package.json
@@ -7,7 +7,10 @@
   "scripts": {},
   "dependencies": {
     "@slack/web-api": "^5.8.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "jira-connector": "^3.1.0"
+    "form-data": "^3.0.0",
+    "jira-connector": "^3.1.0",
+    "stream": "0.0.2"
   }
 }
